<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_opencv_camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotela"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context=".DetectorActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_view"
        android:layout_width="290dp"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="205dp"
        opencv:camera_id="front" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="460dp"
        android:layout_height="380dp"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="220dp"
        android:rotation="90"
        android:src="@mipmap/pizarrasinpinza" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="645dp"
        android:adjustViewBounds="false"
        android:baselineAligned="false"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:orientation="horizontal"
        android:rotation="15"
        android:visibility="visible"
        android:src="@mipmap/carton2" />


    <ImageButton
        android:id="@+id/buttonVolver"
        style="@android:style/Widget.ImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="650dp"
        android:adjustViewBounds="false"
        android:background="@drawable/roundcorner"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/boton" />


    <ImageView
        android:id="@+id/tira1"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="685dp"
        android:alpha=".95"
        android:rotation="15"
        android:src="@drawable/adhesiva" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="690dp"
        android:fontFamily="@font/f3dumb"
        android:rotation="15"
        android:text="@string/volver"
        android:textColor="@color/colorDarkBlue"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/cuerda" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="242dp"
        android:layout_height="187dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="false"
        android:baselineAligned="false"
        android:cropToPadding="false"
        android:orientation="horizontal"
        android:visibility="visible"
        android:src="@drawable/lienzoypinza" />

    <ImageView
        android:id="@+id/cara"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp" />

    <ImageView
        android:id="@+id/botonblanco"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_marginTop="613dp"
        android:layout_marginStart="125dp"
        android:adjustViewBounds="false"
        android:baselineAligned="false"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        android:src="@drawable/botonblanco" />

    <ImageButton
        android:id="@+id/camara"
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="623dp"
        android:background="@drawable/roundcorner"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/camara" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="625dp"
        android:fontFamily="@font/f3dumb"
        android:text=""
        android:textStyle="bold"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/carton_pulsar"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="160dp"
        android:adjustViewBounds="false"
        android:baselineAligned="false"
        android:contentDescription="@string/todo"
        android:cropToPadding="false"
        android:orientation="horizontal"
        android:visibility="gone"
        android:src="@mipmap/carton2" />

    <TextView
        android:id="@+id/texto_pulsar"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/f3dumb"
        android:text="@string/pulsa_camara"
        android:textColor="@color/colorDarkBlue"
        android:visibility="gone"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/camara_pulsar"
        style="@android:style/Widget.ImageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="false"
        android:background="@drawable/roundcorner"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/camara" />

</FrameLayout>
